workspace/second/src/objects/Offer__c.object
<CustomObject>
    <fields>
        <fullName>BenefitElementJunction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitElementJunction</label>
        <referenceTo>Bnefit__c</referenceTo>
        <relationshipLabel>RT_Offer</relationshipLabel>
        <relationshipName>RT_Offer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_to_Execute_Automatic_Enrollment__c</fullName>
        <label>Date to Execute Automatic Enrollment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Enablements_Location__c</fullName>
        <label>Plan Enablements Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Enablements_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plan Enablements Used</label>
        <type>Checkbox</type>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RT_Offer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>